Ui Issue fixes - scroll, alignment

--- a/src/stylesheets/components/_avatar_image.scss
+++ b/src/stylesheets/components/_avatar_image.scss
@@ -6,7 +6,7 @@
   &-wrapper {
     border-radius: 999px !important;
     width: 75px;
-    height: 75x;
+    height: 75px;
     flex-shrink: 0;
     display: grid;
     place-items: center;
